--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -27,6 +28,10 @@ dependencies {
     compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
 
     compile "com.jakewharton:butterknife:$rootProject.ext.butterknifeVersion"
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:$rootProject.ext.dbflow_version"
+    // use kapt for kotlin apt
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:$rootProject.ext.dbflow_version"
+    compile "com.github.Raizlabs.DBFlow:dbflow:$rootProject.ext.dbflow_version"
 
     compile 'com.android.support:support-v4:24.1.1'
     testCompile 'junit:junit:4.12'
